--- a/Index.html
+++ b/Index.html
@@ -12,36 +12,36 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg  menu-content nav-bg-color">
+  <header class="fixed-top">
+    <nav class="navbar navbar-expand-lg menu-content nav-bg-color">
       <div class="container-fluid">
-        <a class="navbar-brand text-white fs-4" href="#">Treming</a>
+        <a class="navbar-brand txt-color fs-4" href="#">Treming</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link text-white hover-item" aria-current="page" href="#">Services</a>
+            <li class="nav-item li-hover">
+              <a class="nav-link txt-color hover-item" aria-current="page" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white hover-item" href="#">Work</a>
+              <a class="nav-link txt-color hover-item" href="#">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white hover-item" href="#">Culture</a>
+              <a class="nav-link txt-color hover-item" href="#">Culture</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white hover-item" href="#">Testimonials</a>
+              <a class="nav-link txt-color hover-item" href="#">Testimonials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white hover-item" href="#">Blog</a>
+              <a class="nav-link txt-color hover-item" href="#">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white hover-item" href="#">Jobs</a>
+              <a class="nav-link txt-color hover-item" href="#">Jobs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white hover-item" href="#">Contact</a>
+              <a class="nav-link txt-color hover-item" href="#">Contact</a>
             </li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
@@ -62,6 +62,16 @@
 
   <!-- SECCION DEL HERO-->
   <section class="hero-container">
+    <div class="hero">
+      <div class="title-hero">
+        <h1 class="txt-title">Amazing employees desrve <span>amazing <br>software</span></h1>
+        <p class="txt-p">We can help your company to discovery amazing <br>software</p>
+      </div>
+      <div class="img-hero">
+        <img src="img/hero.png" alt="image hero">
+      </div>
+
+    </div>
   </section>
   <!-- SECCION SERVICES-->
 
