--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <!--style bootstrap 5.2.3-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>Grupo Treming</title>
@@ -66,16 +68,27 @@
       <div class="title-hero">
         <h1 class="txt-title">Amazing employees desrve <span>amazing <br>software</span></h1>
         <p class="txt-p">We can help your company to discovery amazing <br>software</p>
+        <div class="btn-container">
+          <div class="btn-hero">Contact us</div>
+          <div class="btn-hero">Schedule An Appointment</div>
+        </div>
       </div>
       <div class="img-hero">
         <img src="img/hero.png" alt="image hero">
       </div>
-
+    </div>
+    <div type="button" class="btn-mode" onclick="cambiarModo()">
+      <img src="img/moon.png" alt="" class="moon">
     </div>
   </section>
   <!-- SECCION SERVICES-->
 
-
+  <script type="text/javascript">
+    function cambiarModo() {
+      var cuerpoweb = document.body;
+      cuerpoweb.classList.toggle("oscuro");
+    } 
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
