--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="#">
   <link rel="stylesheet" href="css/style.css">
 
   <!--style bootstrap 5.2.3-->
@@ -25,22 +26,22 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item li-hover">
-              <a class="nav-link txt-color hover-item" aria-current="page" href="#">Services</a>
+              <a class="nav-link txt-color hover-item me-3" aria-current="page" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item" href="#">Work</a>
+              <a class="nav-link txt-color hover-item me-3" href="#">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item" href="#">Culture</a>
+              <a class="nav-link txt-color hover-item me-3" href="#">Culture</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item" href="#">Testimonials</a>
+              <a class="nav-link txt-color hover-item me-3" href="#">Testimonials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item" href="#">Blog</a>
+              <a class="nav-link txt-color hover-item me-3" href="#">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item" href="#">Jobs</a>
+              <a class="nav-link txt-color hover-item me-3" href="#">Jobs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link txt-color hover-item" href="#">Contact</a>
@@ -66,18 +67,18 @@
   <section class="hero-container">
     <div class="hero">
       <div class="title-hero">
-        <h1 class="txt-title">Amazing employees desrve <span>amazing <br>software</span></h1>
+        <h1 class="txt-title">Amazing employees desrve <span>amazing software</span></h1>
         <p class="txt-p">We can help your company to discovery amazing <br>software</p>
         <div class="btn-container">
-          <div class="btn-hero">Contact us</div>
-          <div class="btn-hero">Schedule An Appointment</div>
+          <div class="btn-hero user-select-none">Contact us</div>
+          <div class="btn-hero user-select-none">Schedule An Appointment</div>
         </div>
       </div>
       <div class="img-hero">
         <img src="img/hero.png" alt="image hero">
       </div>
     </div>
-    <div type="button" class="btn-mode" onclick="cambiarModo()">
+    <div type="button" class="btn-mode position-absolute top-50 end-0 translate-middle-y" onclick="cambiarModo()">
       <img src="img/moon.png" alt="" class="moon">
     </div>
   </section>
