--- a/Index.html
+++ b/Index.html
@@ -25,26 +25,26 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item li-hover">
-              <a class="nav-link txt-color hover-item me-3" aria-current="page" href="#">Services</a>
+            <li class="nav-item">
+              <a class="nav-link txt-color hover-item me-4 mt-2" aria-current="page" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-3" href="#">Work</a>
+              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-3" href="#">Culture</a>
+              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Culture</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-3" href="#">Testimonials</a>
+              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Testimonials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-3" href="#">Blog</a>
+              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-3" href="#">Jobs</a>
+              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Jobs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item" href="#">Contact</a>
+              <a class="nav-link txt-color hover-item mt-2" href="#">Contact</a>
             </li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
@@ -67,29 +67,25 @@
   <section class="hero-container">
     <div class="hero">
       <div class="title-hero">
-        <h1 class="txt-title">Amazing employees desrve <span>amazing software</span></h1>
-        <p class="txt-p">We can help your company to discovery amazing <br>software</p>
+        <h1 class="txt-title user-select-none">Amazing employees desrve <span>amazing software</span></h1>
+        <p class="txt-p user-select-none">We can help your company to discovery amazing <br>software</p>
         <div class="btn-container">
           <div class="btn-hero user-select-none">Contact us</div>
           <div class="btn-hero user-select-none">Schedule An Appointment</div>
         </div>
       </div>
       <div class="img-hero">
-        <img src="img/hero.png" alt="image hero">
+        <img class="user-select-none" src="img/hero.png" alt="image hero">
       </div>
     </div>
     <div type="button" class="btn-mode position-absolute top-50 end-0 translate-middle-y" onclick="cambiarModo()">
       <img src="img/moon.png" alt="" class="moon">
     </div>
   </section>
-  <!-- SECCION SERVICES-->
 
-  <script type="text/javascript">
-    function cambiarModo() {
-      var cuerpoweb = document.body;
-      cuerpoweb.classList.toggle("oscuro");
-    } 
-  </script>
+  <!-- SECCION SERVICES-->
+ 
+  <script src="./script/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
