actualización del hero y el modo dark

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header class="fixed-top">
-    <nav class="navbar navbar-expand-lg menu-content nav-bg-color">
+    <nav class="navbar navbar-expand-lg navbar-dark menu-content nav-bg-color">
       <div class="container-fluid">
         <a class="navbar-brand txt-color fs-4" href="#">Treming</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -26,25 +26,25 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-4 mt-2" aria-current="page" href="#">Services</a>
+              <a class="nav-link txt-color hover-item ms-2 me-2 mt-2" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Work</a>
+              <a class="nav-link txt-color hover-item ms-2 me-2 mt-2" href="#">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Culture</a>
+              <a class="nav-link txt-color hover-item ms-2 me-2 mt-2" href="#">Culture</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Testimonials</a>
+              <a class="nav-link txt-color hover-item ms-2 me-2 mt-2" href="#">Testimonials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Blog</a>
+              <a class="nav-link txt-color hover-item ms-2 me-2 mt-2" href="#">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item me-4 mt-2" href="#">Jobs</a>
+              <a class="nav-link txt-color hover-item ms-2 me-2 mt-2" href="#">Jobs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link txt-color hover-item mt-2" href="#">Contact</a>
+              <a class="nav-link txt-color hover-item ms-2 me-2 mt-2" href="#">Contact</a>
             </li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
@@ -79,9 +79,10 @@
       </div>
     </div>
     <div type="button" class="btn-mode position-absolute top-50 end-0 translate-middle-y" onclick="cambiarModo()">
-      <img src="img/moon.png" alt="" class="moon">
+      <img src="img/moon.png" alt="icon-mode" class="moon">
     </div>
   </section>
+
 
   <!-- SECCION SERVICES-->
  
