--- a/Index.html
+++ b/Index.html
@@ -81,6 +81,20 @@
     </div>
   </section>
 
+  <h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p>
+
   <!--button dark-mode-->
   <div type="button" class="btn-mode position-fixed top-50 end-0 translate-middle-y" onclick="cambiarModo()">
     <img src="img/moon-fill.svg" alt="icon-mode" class="moon" id="moon">
