--- a/Index.html
+++ b/Index.html
@@ -8,15 +8,18 @@
   <link rel="shortcut icon" href="#">
   <link rel="stylesheet" href="css/style.css">
 
-  <!--style bootstrap 5.2.3-->
+  <!-- ************* style bootstrap 5.2.3 ***************** -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
   <title>Grupo Treming</title>
 </head>
 
 <body>
 
-  <header class="fixed-top">
+  <!-- *************** section of header ************ -->
+
+  <header class="fixed-top menu">
     <nav class="navbar navbar-expand-lg navbar-dark menu-content nav-bg-color">
       <div class="container-fluid">
         <a class="navbar-brand txt-color fs-4" href="#">Treming</a>
@@ -64,7 +67,8 @@
     </nav>
   </header>
 
-  <!-- SECCION DEL HERO-->
+  <!-- *************** section of hero ************ -->
+
   <section class="hero-container">
     <div class="hero">
       <div class="title-hero">
@@ -81,34 +85,165 @@
     </div>
   </section>
 
-  <h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p><h1>hola</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, consequuntur distinctio laborum aperiam rerum dolores, pariatur numquam possimus eos in quos velit, illo ratione beatae sunt est ducimus natus sed.</p>
+
+  <!-- *************** section of Odoo ************ -->
+  <section class="section-odoo">
+    <div id="carouselExampleDark" class="carousel carousel-dark  slide container" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active indic"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" class="indic"
+          aria-label="Slide 2"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <div class="d-block w-100 carousel-i"></div>
+          <div class="carousel-caption d-block d-md-block">
+            <h5 class="title-partner">We Are Gold <span>Partner</span></h5>
+            <p class="p-partner">Some representative placeholder content for the first slide.</p>
+            <img src="./img/Gold-Partner.png" alt="Gold Partner Odoo" class="gold-partner">
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <div class="d-block w-100 carousel-i"></div>
+          <div class="carousel-caption d-block d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- SECCION ASKED-->
+
+  <section class="section-asked mt-5">
+    <h5 class="title-partner asked-h5">Frequently <span>Asked </span> Queries</h5>
+    <div class="accordion accordion-flush mt-5 mb-5" id="accordionFlushExample">
+      <div class="accordion-item mb-3 shadow rounded bg-transparent border-bottom-0">
+        <h2 class="accordion-header" id="flush-headingOne">
+          <button class="accordion-button collapsed rounded bg-ask ask-item" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            100% Fluid Responsive - Fits any device perfectly
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to demonstrate the
+            <code>.accordion-flush</code> class. This is the first item's accordion body.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item mb-3 shadow rounded bg-transparent border-bottom-0">
+        <h2 class="accordion-header" id="flush-headingTwo">
+          <button class="accordion-button collapsed rounded bg-ask ask-item" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            Clean Code
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to demonstrate the
+            <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
+            filled with some actual content.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item mb-3 shadow rounded bg-transparent border-bottom-0">
+        <h2 class="accordion-header" id="flush-headingThree">
+          <button class="accordion-button collapsed rounded bg-ask ask-item" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            Flat, modern and clean design
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to demonstrate the
+            <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
+            happening here in terms of content, but just filling up the space to make it look, at least at first glance,
+            a bit more representative of how this would look in a real-world application.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item mb-3 shadow rounded bg-transparent border-bottom-0">
+        <h2 class="accordion-header" id="flush-headingFour">
+          <button class="accordion-button collapsed rounded bg-ask ask-item" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+            Custom font support
+          </button>
+        </h2>
+        <div id="flush-collapseFour" class="accordion-collapse collapse bg-ask-item" aria-labelledby="flush-headingFour"
+          data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to demonstrate the
+            <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
+            happening here in terms of content, but just filling up the space to make it look, at least at first glance,
+            a bit more representative of how this would look in a real-world application.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <!--button dark-mode-->
-  <div type="button" class="btn-mode position-fixed top-50 end-0 translate-middle-y" onclick="cambiarModo()">
+  <div type="button" class="btn-mode position-fixed top-50 end-0 translate-middle-y zindex-tooltip"
+    onclick="cambiarModo()">
     <img src="img/moon-fill.svg" alt="icon-mode" class="moon" id="moon">
     <img src="img/sun-fill.svg" alt="icon-mode" class="sun" id="sun">
   </div>
 
+  <footer class="section-footer">
+    <div class="footer-container">
+      <h2>Treming</h2>
+      <div class="footer pb-5">
+        <div class="footer-item footer-1">
+          <h5 class="mb-3">About us</h5>
+          <p class="font-size">At Treming we focus on providing top-notch business-driven IT solutions to companies of
+            all
+            sizes and types.</p>
+          <p class="font-size">Our cutting-edge technology solutions implemented by our team are unmatched in the
+            industry.
+          </p>
+        </div>
+        <div class="ft-section-2">
+          <div class="footer-item footer-2">
+            <h5>Company</h5>
+            <ul class="mt-3">
+              <li><a href="#" class="font-size">Privacy Policy</a></li>
+              <li><a href="#" class="font-size">Term And Condition</a></li>
+              <li><a href="#" class="font-size">Lates Blogs</a></li>
+              <li><a href="#" class="font-size">App Services</a></li>
+            </ul>
+          </div>
+          <div class="footer-item footer-2">
+            <h5>Quick Links</h5>
+            <ul class="mt-3">
+              <li><a href="#" class="font-size">Home</a></li>
+              <li><a href="#" class="font-size">Services</a></li>
+              <li><a href="#" class="font-size">Screenshot</a></li>
+              <li><a href="#" class="font-size">Pricing</a></li>
+              <li><a href="#" class="font-size">Testimonial</a></li>
+            </ul>
+          </div>
+          <div class="footer-item footer-2">
+            <h5>Social Pages</h5>
+            <ul class="mt-3">
+              <li><a href="#" class="font-size">Facebook</a></li>
+              <li><a href="#" class="font-size">Twitter</a></li>
+              <li><a href="#" class="font-size">Instagram</a></li>
+              <li><a href="#" class="font-size">Linkedin</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <p class="copy-rigth">GRUPO TREMING 2022, TODOS LOS DERECHOS RESERVADOS</p>
+    </div>
+  </footer>
 
-  
+  <!-- script-->
 
-
-  
-
-  <!-- SECCION SERVICES-->
- 
   <script src="./script/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
