actualizar busines y ask

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,8 @@
   <header class="fixed-top menu">
     <nav class="navbar navbar-expand-lg navbar-dark menu-content nav-bg-color">
       <div class="container-fluid">
-        <a class="navbar-brand txt-color fs-4" href="#">Treming</a>
+        <a class="navbar-brand fs-4 logo-container" href="#"><img src="img/logo.png" alt="Logo treming"
+            class="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -130,7 +131,8 @@
         </h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
           data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to demonstrate the
+          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to
+            demonstrate the
             <code>.accordion-flush</code> class. This is the first item's accordion body.
           </div>
         </div>
@@ -144,7 +146,8 @@
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
           data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to demonstrate the
+          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to
+            demonstrate the
             <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
             filled with some actual content.
           </div>
@@ -159,7 +162,8 @@
         </h2>
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
           data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to demonstrate the
+          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to
+            demonstrate the
             <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
             happening here in terms of content, but just filling up the space to make it look, at least at first glance,
             a bit more representative of how this would look in a real-world application.
@@ -175,10 +179,47 @@
         </h2>
         <div id="flush-collapseFour" class="accordion-collapse collapse bg-ask-item" aria-labelledby="flush-headingFour"
           data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to demonstrate the
+          <div class="accordion-body bg-ask-item ask-p">Placeholder content for this accordion, which is intended to
+            demonstrate the
             <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
             happening here in terms of content, but just filling up the space to make it look, at least at first glance,
             a bit more representative of how this would look in a real-world application.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ELISEO-->
+
+  <section class="section-busines"> <!-- centrar el costado de la img en la interfax-->
+    <div class="main-busines">
+      <img class="user-select-nome" src="img/Foto 1.png" alt="" class="Foto1">
+      <div class="busines-content">
+        <h1 class="title-busines title-partner">"We Impove Your Business With Technology"</h1>
+        <p class="p-busines">
+          Grupo Treming is a consulting firm leader in the area of IT in Latin
+          America, founded in 2010, with the sole purpose of consolidating
+          a firm formed by highly experienced consultants, which allows us
+          to offet solutions with a high degree of specialization through the
+          business.
+        </p>
+        <div class="box-container">
+          <div class="box one">
+            <h4 class="box-letter b-l-t">13</h4>
+            <P class="box-letter b-l-p">YEARS</P>
+          </div>
+          <div class="box two">
+            <h4 class="box-letter b-l-t">+120</h4>
+            <P class="box-letter b-l-p">EMPLOYEES</P>
+          </div>
+          <div class="box three">
+            <h4 class="box-letter b-l-t">+100</h4>
+            <P class="box-letter b-l-p">CUSTOMERS</P>
+          </div>
+          <div class="box four">
+            <h4 class="box-letter b-l-t">+150</h4>
+            <P class="box-letter b-l-p">PROJECTS</P>
           </div>
         </div>
       </div>
