actualizar busines y ask

--- a/Index.html
+++ b/Index.html
@@ -80,7 +80,7 @@
           <div class="btn-hero user-select-none">Schedule An Appointment</div>
         </div>
       </div>
-      <div class="img-hero">
+      <div class="img-hero position-absolute top-50 end-0 translate-middle-y">
         <img class="user-select-none" src="img/hero.png" alt="image hero">
       </div>
     </div>
@@ -116,8 +116,258 @@
     </div>
   </section>
 
+  <!-- *************************** Business ********************-->
 
-  <!-- SECCION ASKED-->
+  <section class="section-busines"> <!-- centrar el costado de la img en la interfax-->
+    <div class="main-busines">
+      <img class="user-select-nome img-bus" src="img/Foto1.png" alt="photo Business">
+      <div class="busines-content">
+        <h1 class="title-busines title-partner">"We Impove Your Business With Technology"</h1>
+        <p class="mt-2 btn-business">
+          <button class="btn btn-primary m-auto d-block" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Read more
+          </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body p-busines ask-p m-auto">
+            Grupo Treming is a consulting firm leader in the area of IT in Latin
+          America, founded in 2010, with the sole purpose of consolidating
+          a firm formed by highly experienced consultants, which allows us
+          to offet solutions with a high degree of specialization through the
+          business.
+          </div>
+        </div>
+        <p class="p-busines">
+          Grupo Treming is a consulting firm leader in the area of IT in Latin
+          America, founded in 2010, with the sole purpose of consolidating
+          a firm formed by highly experienced consultants, which allows us
+          to offet solutions with a high degree of specialization through the
+          business.
+        </p>
+        <div class="box-container">
+          <div class="box one">
+            <h4 class="box-letter b-l-t">13</h4>
+            <P class="box-letter b-l-p">YEARS</P>
+          </div>
+          <div class="box two">
+            <h4 class="box-letter b-l-t">+120</h4>
+            <P class="box-letter b-l-p">EMPLOYEES</P>
+          </div>
+          <div class="box three">
+            <h4 class="box-letter b-l-t">+100</h4>
+            <P class="box-letter b-l-p">CUSTOMERS</P>
+          </div>
+          <div class="box four">
+            <h4 class="box-letter b-l-t">+150</h4>
+            <P class="box-letter b-l-p">PROJECTS</P>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ********************* SECCION LOGOS *********************** -->
+
+  <section class="container my-5 section-brands">
+    <h2 class="text-center mb-5 title-partner">Our <span>Customer</span></h2>
+    <!-- *** ROW #1 ***-->
+    <div class="row row-cols-auto d-flex justify-content-center align-items-center">
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/adoc.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/aeroman.png" alt="aeroman" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/afp-confia.jpg" alt="confia" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/aseuisa.png" alt="aseuisa" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/banco-agricola.jpg" alt="banco agricola" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/banco-azul.jpg" alt="Banco Azul" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/bfa.jpg" alt="Bfa" class="img-fluid">
+        </a>
+      </div>
+    </div>
+    <!-- *** ROW #2 *** -->
+    <div class="row row-cols-auto d-flex justify-content-center align-items-center">
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/davivienda.png" alt="Davivienda" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/cmi.jpg" alt="cmi" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/crediq.png" alt="crdiq" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/infrasal.jpg" alt="infrasal" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/seguros-azul.png" alt="seguros azul" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/sigmaq.jpg" alt="sigmaq" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/siman.jpg" alt="siman" class="img-fluid">
+        </a>
+      </div>
+    </div>
+    <!-- *** ROW #3 *** -->
+    <div class="row row-cols-auto d-flex justify-content-center align-items-center">
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/unicomer.jpg" alt="unicomer" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/aes.jpg" alt="Aes" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/edh.png" alt="edh" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/bolsa-de-valores.png" alt="Bolsa de valores" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/desconocido.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/optica.png" alt="optica" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/afp-crecer.png" alt="crecer" class="img-fluid">
+        </a>
+      </div>
+    </div>
+    <!-- *** ROW #4 ***-->
+    <div class="row row-cols-auto d-flex justify-content-center align-items-center">
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/scotia-seguros.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/lesa.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/premim.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/punto-express.jpg" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!"> <img width="70px" src="img/textufil.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/dymel.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/color360.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+    </div>
+    <!-- *** ROW #5 *** -->
+    <div class="row row-cols-auto d-flex justify-content-center align-items-center">
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/hospital-lourdes.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/banco-cuscatlan.webp" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/bfa2.jpg" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/linea2.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <img width="70px" src="img/aeroman.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/holcim.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <a href="#!">
+          <img width="70px" src="img/importadora-universal.png" alt="adoc" class="img-fluid">
+        </a>
+      </div>
+    </div>
+    <!-- *** ROW #6 *** -->
+    <div class="row row-cols-auto d-flex justify-content-center align-items-center">
+      <div class="col celda efecto d-flex justify-content-center align-items-center">
+        <img width="70px" src="img/fgr.png" alt="" class="img-fluid">
+      </div>
+    </div>
+  </section>
+
+
+  <!-- ********************** SECCION ASKED *********************-->
 
   <section class="section-asked mt-5">
     <h5 class="title-partner asked-h5">Frequently <span>Asked </span> Queries</h5>
@@ -190,44 +440,6 @@
     </div>
   </section>
 
-  <!-- ELISEO-->
-
-  <section class="section-busines"> <!-- centrar el costado de la img en la interfax-->
-    <div class="main-busines">
-      <img class="user-select-nome" src="img/Foto 1.png" alt="" class="Foto1">
-      <div class="busines-content">
-        <h1 class="title-busines title-partner">"We Impove Your Business With Technology"</h1>
-        <p class="p-busines">
-          Grupo Treming is a consulting firm leader in the area of IT in Latin
-          America, founded in 2010, with the sole purpose of consolidating
-          a firm formed by highly experienced consultants, which allows us
-          to offet solutions with a high degree of specialization through the
-          business.
-        </p>
-        <div class="box-container">
-          <div class="box one">
-            <h4 class="box-letter b-l-t">13</h4>
-            <P class="box-letter b-l-p">YEARS</P>
-          </div>
-          <div class="box two">
-            <h4 class="box-letter b-l-t">+120</h4>
-            <P class="box-letter b-l-p">EMPLOYEES</P>
-          </div>
-          <div class="box three">
-            <h4 class="box-letter b-l-t">+100</h4>
-            <P class="box-letter b-l-p">CUSTOMERS</P>
-          </div>
-          <div class="box four">
-            <h4 class="box-letter b-l-t">+150</h4>
-            <P class="box-letter b-l-p">PROJECTS</P>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
   <!--button dark-mode-->
   <div type="button" class="btn-mode position-fixed top-50 end-0 translate-middle-y zindex-tooltip"
     onclick="cambiarModo()">
@@ -279,7 +491,7 @@
           </div>
         </div>
       </div>
-      <p class="copy-rigth">GRUPO TREMING 2022, TODOS LOS DERECHOS RESERVADOS</p>
+      <p class="copy-rigth">GRUPO TREMING &copy 2022, TODOS LOS DERECHOS RESERVADOS</p>
     </div>
   </footer>
 
